--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.34.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
