--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "project-29-simple-portfolio-ts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Devang47.github.io/simple-portfolio-with-particlejs/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/animejs": "^3.1.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "animejs": "^3.2.1",
     "gh-pages": "^3.2.3",
-    "gsap": "^3.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
